--- a/client/web/src/enterprise/insights/components/live-preview-container/LivePreviewContainer.module.scss
+++ b/client/web/src/enterprise/insights/components/live-preview-container/LivePreviewContainer.module.scss
@@ -12,16 +12,7 @@
     &__chart {
         width: 100%;
         height: 100%;
-
-        [data-chart-size-root], [data-line-chart-size-root] {
-            min-height: 15rem;
-        }
-
-        @media (--md-breakpoint-down) {
-            [data-chart-size-root], [data-line-chart-size-root] {
-                min-height: 20rem;
-            }
-        }
+        padding: 0;
     }
 
     &__chart--with-mock {
