--- a/client/branded/src/global-styles/index.scss
+++ b/client/branded/src/global-styles/index.scss
@@ -95,6 +95,7 @@ $hr-border-color: var(--border-color);
 $hr-margin-y: 0.25rem;
 
 // Disable transitions
+$enable-transitions: false;
 $input-transition: none;
 
 // Spacer
