code review updates

--- a/client/web/src/enterprise/insights/pages/insights/creation/capture-group/components/SearchQueryChecks.module.scss
+++ b/client/web/src/enterprise/insights/pages/insights/creation/capture-group/components/SearchQueryChecks.module.scss
@@ -1,26 +1,25 @@
 .form-series-checks {
     line-height: 1.6;
     font-size: 0.75rem;
+}
 
-    &__series-check {
-        list-style: none;
-        margin-left: 24px;
-        padding-left: 0;
+.form-series-check {
+    list-style: none;
+    margin-left: 1.5rem;
+    padding-left: 0;
 
-        & > li {
-            position: relative;
-        }
-
-        svg {
-            position: absolute;
-            left: -24px;
-        }
+    li {
+        position: relative;
     }
 
-    code {
-        background-color: #d6eaf1;
-        padding: 1px;
-        border-radius: 4px;
-        font-weight: 600;
+    svg {
+        position: absolute;
+        left: -24px;
     }
+}
+
+code {
+    background-color: #d6eaf1;
+    border-radius: 4px;
+    font-weight: 600;
 }
