--- a/client/web/src/enterprise/catalog/pages/overview/components/catalog-explorer/CatalogExplorerViewOptionsRow.module.scss
+++ b/client/web/src/enterprise/catalog/pages/overview/components/catalog-explorer/CatalogExplorerViewOptionsRow.module.scss
@@ -1,12 +1,7 @@
 .form {
-    display: grid;
-    align-items: center;
     gap: 0.5rem;
+}
 
-    &--no-before {
-        grid-template-columns: [toggle] minmax(4rem, min-content) [query] 1fr;
-    }
-    &--has-before {
-        grid-template-columns: [before] min-content [toggle] minmax(4rem, min-content) [query] 1fr;
-    }
+.input-select {
+    width: unset !important;
 }
