Add comment to b element styles within card body

--- a/client/web/src/enterprise/insights/pages/insights/creation/intro/cards/InsightCards.module.scss
+++ b/client/web/src/enterprise/insights/pages/insights/creation/intro/cards/InsightCards.module.scss
@@ -31,6 +31,11 @@
 
     b {
         display: contents;
+
+        // A bootstrap CSS class .card brings custom color styles that we should change
+        // for b elements within a card accroding to our designs for this card.
+        // Since bootstrap classes works with !important we should override this also
+        // with !important statement.
         color: var(--body-color) !important;
     }
 }
