--- a/client/web/src/enterprise/insights/pages/insights/creation/intro/cards/InsightCards.module.scss
+++ b/client/web/src/enterprise/insights/pages/insights/creation/intro/cards/InsightCards.module.scss
@@ -3,18 +3,17 @@
     display: flex;
     flex-direction: column;
     box-shadow: var(--box-shadow);
-    text-decoration: none;
-    color: unset;
     font-size: 0.75rem;
+    text-align: start;
 
     &:hover {
-        text-decoration: none;
         background-color: var(--secondary-2);
     }
 
     &:focus {
         background-color: var(--secondary-2);
         box-shadow: var(--focus-box-shadow);
+        outline: none;
     }
 
     &--extension-card {
