--- a/client/web/src/enterprise/batches/execution/BatchSpecExecutionDetailsPage.module.scss
+++ b/client/web/src/enterprise/batches/execution/BatchSpecExecutionDetailsPage.module.scss
@@ -8,13 +8,10 @@
     height: 100%;
 }
 
-.workspaces-list {
-    max-height: 60vh;
-    overflow-y: auto;
-}
-
 .workspaces-list-container {
     width: 40%;
+    max-width: 350px;
+    flex-shrink: 0;
 }
 
 .workspace-list-icon {
