--- a/client/web/src/enterprise/insights/pages/insights/creation/intro/IntroCreationPage.module.scss
+++ b/client/web/src/enterprise/insights/pages/insights/creation/intro/IntroCreationPage.module.scss
@@ -8,7 +8,11 @@
 
 .section-content {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
     row-gap: 0.5rem;
     column-gap: 0.5rem;
+
+    &--extension {
+        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    }
 }
