--- a/client/web/src/enterprise/insights/pages/insights/creation/intro/cards/InsightCards.module.scss
+++ b/client/web/src/enterprise/insights/pages/insights/creation/intro/cards/InsightCards.module.scss
@@ -2,13 +2,17 @@
 .card {
     display: flex;
     flex-direction: column;
-    box-shadow: var(--box-shadow);
+    box-shadow: 0 0 8px -6px rgba(36, 41, 54, 0.08);
     font-size: 0.875rem;
     text-align: start;
 
-    &:hover,
+    &:hover {
+        box-shadow: var(--dropdown-shadow);
+        border: 1px solid var(--border-color-2);
+    }
+
     &:focus {
-        box-shadow: 0 0 0 0.1875rem var(--primary);
+        box-shadow: var(--focus-box-shadow);
         outline: none;
     }
 
@@ -21,7 +25,7 @@
     display: flex;
     flex-direction: column;
     background-color: transparent;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     padding: 0;
 
     b {
@@ -38,6 +42,7 @@
 
 .card-title {
     color: var(--body-color);
+    margin-bottom: 0.5rem;
 }
 
 .card-footer {
@@ -57,6 +62,10 @@
     width: 100%;
     object-fit: contain;
     background-color: var(--body-bg);
+
+    :global(.theme-dark) & {
+        background-color: transparent;
+    }
 }
 
 .images {
