--- a/client/web/src/enterprise/catalog/components/catalog-health-table/CatalogHealthTable.module.scss
+++ b/client/web/src/enterprise/catalog/components/catalog-health-table/CatalogHealthTable.module.scss
@@ -40,8 +40,8 @@
         max-width: var(--status-cell-width);
     }
 
-    .header-entity-owner,
-    .cell-entity-owner {
+    .header-owner,
+    .cell-owner {
         padding-right: var(--spacer) !important;
     }
 
