--- a/client/vscode/src/webview/search-panel/index.module.scss
+++ b/client/vscode/src/webview/search-panel/index.module.scss
@@ -81,12 +81,13 @@
     }
 
     &__btn {
-            font-size: var(--vscode-font-size) !important;
-            background-color: var(--primary);
-            color: var(--white)
-    }
-
-    & a, a:visited, a:hover, a.active {
+        font-size: var(--vscode-font-size) !important;
+        background-color: var(--primary);
         color: var(--white)
     }
+
+    &__text {
+        color: var(--white)
+    }
+
 }
