--- a/client/web/src/enterprise/catalog/contributions/tree/TreeComponents.module.scss
+++ b/client/web/src/enterprise/catalog/contributions/tree/TreeComponents.module.scss
@@ -10,7 +10,7 @@
 .box-grid-item {
     padding: calc(0.5 * var(--spacer));
     overflow: hidden;
-
+    max-width: 20rem;
     .link-big-click-area {
         padding: calc(0.5 * var(--spacer));
         margin: calc(-1 * 0.5 * var(--spacer));
