--- a/client/vscode/src/webview/search-sidebar/SearchSidebar.module.scss
+++ b/client/vscode/src/webview/search-sidebar/SearchSidebar.module.scss
@@ -8,3 +8,27 @@
         background: none;
     }
 }
+
+.text {
+    font-size: var(--vscode-font-size) !important;
+    color: var(--white);
+}
+
+.button,
+.button:link,
+.button:visited {
+    font-size: var(--vscode-font-size) !important;
+    background-color: var(--primary);
+    color: var(--white);
+}
+
+.input {
+    font-size: var(--vscode-font-size) !important;
+    color: var(--gray);
+}
+
+.title {
+    text-transform: uppercase;
+    font-size: var(--vscode-font-size) !important;
+    color: var(--white);
+}
