--- a/client/web/src/charts/components/line-chart/components/floating-panel/FloatingPanel.story.module.scss
+++ b/client/web/src/charts/components/line-chart/components/floating-panel/FloatingPanel.story.module.scss
@@ -1,27 +1,26 @@
 .container {
     width: 100%;
     height: 100%;
-    background-color: wheat;
     overflow: auto;
     position: relative;
 }
 
 .content {
-    width: 3000px;
-    height: 3000px;
+    width: 1875rem;
+    height: 1875rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .target {
-    height: 200px;
+    height: 10rem;
 }
 
 .floating {
     background-color: #0b70db;
     color: white;
-    padding: 5px;
-    border-radius: 4px;
-    min-height: 300px;
+    padding: 0.25rem;
+    border-radius: 0.24rem;
+    min-height: 20rem;
 }
