--- a/client/vscode/src/webview/search-panel/SearchResults.module.scss
+++ b/client/vscode/src/webview/search-panel/SearchResults.module.scss
@@ -1,3 +1,81 @@
+@import 'wildcard/src/global-styles/breakpoints';
+
+.streaming-search-results {
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto auto 1fr;
+    height: min-content;
+    padding-top: 0.5rem;
+
+    @media (--md-breakpoint-down) {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto 1fr;
+    }
+
+    &__container {
+        // Hack!! Fixes some possible nested scrolling on diff searches
+        // due to size calculations on diff results. The parent will scroll
+        // instead so this doesn't really hide anything.
+        overflow-y: hidden;
+
+        overflow-x: hidden;
+        grid-column: 2;
+        grid-row: 3;
+
+        @media (--md-breakpoint-down) {
+            grid-column: 1;
+            grid-row: 4;
+            padding-left: 1rem;
+        }
+    }
+}
+
 .result {
     color: var(--success);
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 0.5rem;
+    height: 100%;
+    flex: 1 0 auto;
+    text-align: left;
+}
+
+.search-results-info-bar {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-self: stretch;
+
+    :global(.alert) {
+        margin-bottom: 0.5rem;
+    }
+
+    :global(.mdi-icon) {
+        margin-right: 0.125rem;
+    }
+}
+
+.divider {
+    height: 1rem;
+    border-right: 1px solid var(--border-color);
+    margin: 0 0.5rem 0 0;
+
+    &:first-child {
+        display: none;
+    }
+}
+
+.expander {
+    display: block;
+    flex-grow: 1;
+}
+
+.nav-item:last-child {
+    margin-right: 0 !important;
 }
