Revert migration for follow-up PR

--- a/client/web/src/SourcegraphWebApp.scss
+++ b/client/web/src/SourcegraphWebApp.scss
@@ -55,6 +55,8 @@ body,
     min-width: 0;
 }
 
+// Global styles provided by @reach packages. Should be imported once in the global scope.
+@import '@reach/dialog/styles.css';
 @import '@reach/combobox/styles.css';
 @import '@reach/menu-button/styles.css';
 @import '@reach/listbox/styles.css';
@@ -62,6 +64,7 @@ body,
 // Pages
 @import './api/ApiConsole';
 @import './search/ShepherdTour';
+@import './components/Dialog';
 
 :root {
     --max-homepage-container-width: 65rem;
