Update "Install browser extension" step completion logic to wait for actual installation

--- a/client/web/src/onboarding-tour/OnboardingTour.module.scss
+++ b/client/web/src/onboarding-tour/OnboardingTour.module.scss
@@ -84,7 +84,9 @@
     flex-grow: 1;
 
     &::-webkit-scrollbar {
+        /* stylelint-disable-next-line declaration-property-unit-whitelist */
         margin-left: 4px;
+        /* stylelint-disable-next-line declaration-property-unit-whitelist */
         width: 4px;
     }
 
@@ -107,6 +109,7 @@
 .progress-bar {
     width: 0.9rem;
     height: 0.9rem;
+    /* stylelint-disable-next-line declaration-property-unit-whitelist */
     margin-right: 1px;
 
     // stylelint-disable-next-line selector-class-pattern
