Remove search bar cursor border

--- a/client/vscode/src/webview/search-panel/index.module.scss
+++ b/client/vscode/src/webview/search-panel/index.module.scss
@@ -89,3 +89,11 @@
         color: var(--white);
     }
 }
+
+:global(.monaco-mouse-cursor-text) {
+    /* Hack: remove focus ring around Monaco editor cursor */
+    &:focus-within,
+    &:focus-visible {
+        box-shadow: none;
+    }
+}
