--- a/client/wildcard/src/components/Popover/Popover.story.module.scss
+++ b/client/wildcard/src/components/Popover/Popover.story.module.scss
@@ -18,6 +18,8 @@
     overflow: auto;
     position: relative;
     border: 1px solid #000000;
+    display: flex;
+    flex-direction: column;
 
     &--as-sub-root {
         flex-shrink: 0;
@@ -34,6 +36,17 @@
     justify-content: center;
 }
 
+.mouse-zone {
+    flex: 1;
+    margin: 8rem;
+    border: 1px solid #000000;
+    background: var(--gray-01);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .target {
     height: 10rem;
 }
@@ -44,6 +57,7 @@
     border-radius: 0.24rem;
     max-width: 12rem;
     color: var(--color-bg-1);
+    pointer-events: none;
 
     &-with-scroll {
         max-height: 8rem;
