--- a/client/web/src/search/notebook/NotebookTitle.module.scss
+++ b/client/web/src/search/notebook/NotebookTitle.module.scss
@@ -19,7 +19,7 @@
 }
 
 .title-input {
-    width: 32ch;
+    width: 32rem;
     // Match h1 size
     font-size: 1.625rem;
     // Reset form-control styles
