--- a/client/wildcard/src/components/Popover/Popover.story.module.scss
+++ b/client/wildcard/src/components/Popover/Popover.story.module.scss
@@ -18,13 +18,11 @@
     overflow: auto;
     position: relative;
     border: 1px solid #000000;
-    display: flex;
-    flex-direction: column;
 
     &--as-sub-root {
         flex-shrink: 0;
         flex-grow: 1;
-        margin: 6rem;
+        margin: 6rem 14rem;
     }
 }
 
