chore: Updated list-group bg on dark mode

--- a/client/branded/src/global-styles/list-group.scss
+++ b/client/branded/src/global-styles/list-group.scss
@@ -80,7 +80,7 @@
         pointer-events: none;
 
         :global(.theme-light) & {
-            background-color: var(--list-group-disabled-bg);
+            background-color: var(--white);
         }
     }
 
