--- a/client/wildcard/src/components/Modal/Modal.module.scss
+++ b/client/wildcard/src/components/Modal/Modal.module.scss
@@ -1,4 +1,6 @@
-@import '@reach/dialog/styles.css';
+// Note: Import disabled until Modal migration is finished: https://github.com/sourcegraph/sourcegraph/pull/29470
+// Avoids potential duplicate import that could cause styling issues.
+// @import '@reach/dialog/styles.css';
 
 [data-reach-dialog-overlay] {
     background-color: rgba(var(--gray-04-rgb), 0.5);
