--- a/client/web/src/enterprise/insights/pages/insights/creation/capture-group/components/query-input/CaptureGroupQueryInput.module.scss
+++ b/client/web/src/enterprise/insights/pages/insights/creation/capture-group/components/query-input/CaptureGroupQueryInput.module.scss
@@ -1,21 +1,21 @@
 .root {
     position: relative;
     width: 100%;
+    display: flex;
 }
 
-.input {
-    &:global(.is-invalid),
-    &:global(.is-valid) {
-        // Shift valid and invalid bootstrap icons to the left in order to make a space for
-        // regexp icon
-        padding-right: calc(1.4285714286rem + 2.25rem);
-        background-position: top calc(0.3571428571rem + 0.2075rem) right calc(0.3571428571rem + 1.861875rem);
-    }
+.input-wrapper {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .regex-button {
+    align-self: flex-start;
     background-color: var(--input-disabled-bg);
-    position: absolute;
-    top: 0.375rem;
-    right: 0.375rem;
+}
+
+.preview-button {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left: 0;
 }
