Fix sidebar rendering issue, button color, file match repo name

--- a/client/vscode/src/webview/index.scss
+++ b/client/vscode/src/webview/index.scss
@@ -41,7 +41,7 @@ code {
     font-size: var(--vscode-editor-font-size) !important;
 }
 
-a {
+a, .infobar-button-link {
     color: var(--vscode-textLink-foreground) !important;
 }
 
