Fix monaco field background for dark theme

--- a/client/web/src/enterprise/insights/components/form/monaco-field/MonacoField.module.scss
+++ b/client/web/src/enterprise/insights/components/form/monaco-field/MonacoField.module.scss
@@ -55,6 +55,11 @@
         display: none;
     }
 
+    :global(.monaco-editor),
+    :global(.monaco-editor-background) {
+        background-color: var(--input-bg) !important;
+    }
+
     &--without-field-styles {
         padding: 0;
         border: none;
