Allow modifying background colors slightly

--- a/client/web/src/keyboardShortcuts/KeyboardShortcutsHelp.module.scss
+++ b/client/web/src/keyboardShortcuts/KeyboardShortcutsHelp.module.scss
@@ -1,3 +1,7 @@
+.modal-container {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .modal-header {
     display: flex;
     align-items: flex-start;
