feat: add more Link replacements to see UI changes

--- a/client/wildcard/src/components/Link/AnchorLink/AnchorLink.module.scss
+++ b/client/wildcard/src/components/Link/AnchorLink/AnchorLink.module.scss
@@ -2,6 +2,11 @@
     --link-hover-decoration: underline;
 }
 
+// To fix TS build error
+.anchor-link {
+    --link-hover-decoration: underline;
+}
+
 a:where(.anchor-link) {
     color: var(--link-color);
     text-decoration: none;
