Fix by stylelint

--- a/client/wildcard/src/components/Popover/floating-panel/FloatingPanel.module.scss
+++ b/client/wildcard/src/components/Popover/floating-panel/FloatingPanel.module.scss
@@ -39,6 +39,6 @@
         position: relative;
         z-index: 1;
 
-        border-top-color: white;
+        border-top-color: var(--border-color);
     }
 }
