Use semantic var

--- a/client/wildcard/src/components/Modal/Modal.module.scss
+++ b/client/wildcard/src/components/Modal/Modal.module.scss
@@ -1,13 +1,7 @@
 @import '@reach/dialog/styles.css';
 
 [data-reach-dialog-overlay] {
-    background-color: rgba(var(--gray-04-rgb), 0.5);
-}
-
-:global(.theme-dark) {
-    [data-reach-dialog-overlay] {
-        background-color: rgba(var(--gray-08-rgb), 0.5);
-    }
+    background-color: var(--modal-bg);
 }
 
 [data-reach-dialog-content] {
