chore: Updated btn-icon color

--- a/client/web/src/enterprise/batches/create/workspaces-preview/WorkspacesPreviewListItem.module.scss
+++ b/client/web/src/enterprise/batches/create/workspaces-preview/WorkspacesPreviewListItem.module.scss
@@ -26,3 +26,8 @@
     align-self: flex-start;
     margin-top: 0.1rem;
 }
+
+.btn-bordered {
+    // Added to undo overide of border property on .btn-icon
+    border: 1px solid transparent !important;
+}
