--- a/client/wildcard/src/components/Button/Button.module.scss
+++ b/client/wildcard/src/components/Button/Button.module.scss
@@ -96,7 +96,7 @@
     margin: 0;
     padding: 0;
     background: transparent;
-    color: inherit;
+    color: var(--icon-color);
     display: flex;
     align-items: center;
     border: none;
